fix alignment stuff

--- a/wordpress/wp-content/themes/jade-for-wordpress/style.css
+++ b/wordpress/wp-content/themes/jade-for-wordpress/style.css
@@ -24,6 +24,16 @@ p {
     margin-right:40px;
 }
 
+.container-fluid{
+    margin:0;
+    height: 100%;
+    margin-bottom:30px;
+}
+
+.container-inside {
+    margin-top: 180px;
+}
+
 #headerurl{
     color: white;
 }
@@ -38,6 +48,10 @@ p {
         color: white;
 }
 
+.col-md-4 {
+    margin-top: 25px;
+}
+
 .scroll-top{
     color: #fff;
     text-decoration: none;
@@ -45,6 +59,7 @@ p {
     left: 50%;
     margin-bottom: 20px;
 }
+
 
 @media only screen and (max-width: 576px) {
          .blogtitle {
@@ -65,11 +80,11 @@ p {
  home page look and feel
 ###############
  */
-    .container-fluid{
-        margin:0;
-        height: 100%;
-        margin-bottom:30px;
+
+    .container-inside {
+        margin-top: 0;
     }
+
          /*basic header */
          #header {
              position: relative;
@@ -116,18 +131,14 @@ p {
 
 @media only screen and (min-width: 721px) {
 
-    .container-fluid{
-        margin:0;
-        padding-top: 200px;
-        height: 100%;
-        margin-bottom:30px;
-    }
+
          /*basic header */
          #header {
              position: fixed;
              background-color: #1e90ff;
              color: #ffffff;
              width: 100%;
+             z-index:100;
         }
 
          .blogtitle {
@@ -251,6 +262,7 @@ article {
 /* author info stuff at bottom of post */
 .postfooter{
     background: #1e90ff;
+    margin-top: 5px;
     padding-top: 10px;
     padding-bottom: 10px;
     color: white;
